@@ -3,6 +3,7 @@ Revision history for SEO-Inspector
 0.02
 	Added tests for Open Graph/Twitter Cards, readability analysis, and page size
 	Use Params::Get and Object::Configure
+	Added the resolution field
 
 0.01	Fri Aug 29 14:45:27 EDT 2025
         First draft
